Resolves flickering issue with slider

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -314,7 +314,7 @@
 
   @media #{$breakpoint-small-medium} {
     transform: scale(1);
-    min-height: 480px;
+    min-height: 500px;
   }
 
   img {
